src/OpenCvSharp.Native/include/open_cv_sharp/calib3d/calib3d.h

OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_rodrigues(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    jyppx_ocv_mat* jacobian);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_rq_decomp3x3(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* mtx_r,
    jyppx_ocv_mat* mtx_q,
    jyppx_ocv_mat* qx,
    jyppx_ocv_mat* qy,
    jyppx_ocv_mat* qz,
    double* euler_x,
    double* euler_y,
    double* euler_z);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_decompose_projection_matrix(
    const jyppx_ocv_mat* proj_matrix,
    jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* rot_matrix,
    jyppx_ocv_mat* trans_vect,
    jyppx_ocv_mat* rot_matrix_x,
    jyppx_ocv_mat* rot_matrix_y,
    jyppx_ocv_mat* rot_matrix_z,
    jyppx_ocv_mat* euler_angles);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_compose_rt(
    const jyppx_ocv_mat* rvec1,
    const jyppx_ocv_mat* tvec1,
    const jyppx_ocv_mat* rvec2,
    const jyppx_ocv_mat* tvec2,
    jyppx_ocv_mat* rvec3,
    jyppx_ocv_mat* tvec3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_compose_rt_extended(
    const jyppx_ocv_mat* rvec1,
    const jyppx_ocv_mat* tvec1,
    const jyppx_ocv_mat* rvec2,
    const jyppx_ocv_mat* tvec2,
    jyppx_ocv_mat* rvec3,
    jyppx_ocv_mat* tvec3,
    jyppx_ocv_mat* dr3dr1,
    jyppx_ocv_mat* dr3dt1,
    jyppx_ocv_mat* dr3dr2,
    jyppx_ocv_mat* dr3dt2,
    jyppx_ocv_mat* dt3dr1,
    jyppx_ocv_mat* dt3dt1,
    jyppx_ocv_mat* dt3dr2,
    jyppx_ocv_mat* dt3dt2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_project_points(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* rvec,
    const jyppx_ocv_mat* tvec,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* image_points,
    jyppx_ocv_mat* jacobian,
    double aspect_ratio);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_project_points_separated_jacobians(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* rvec,
    const jyppx_ocv_mat* tvec,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* image_points,
    jyppx_ocv_mat* dpdr,
    jyppx_ocv_mat* dpdt,
    jyppx_ocv_mat* dpdf,
    jyppx_ocv_mat* dpdc,
    jyppx_ocv_mat* dpdk,
    jyppx_ocv_mat* dpdo,
    double aspect_ratio);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_solve_pnp(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvec,
    jyppx_ocv_mat* tvec,
    int use_extrinsic_guess,
    int flags,
    int* solved);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_solve_pnp_ransac(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvec,
    jyppx_ocv_mat* tvec,
    int use_extrinsic_guess,
    int iterations_count,
    float reprojection_error,
    double confidence,
    jyppx_ocv_mat* inliers,
    int flags,
    int* solved);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_project_points(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* rvec,
    const jyppx_ocv_mat* tvec,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* image_points,
    double alpha,
    jyppx_ocv_mat* jacobian);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_distort_points(
    const jyppx_ocv_mat* undistorted,
    jyppx_ocv_mat* distorted,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    double alpha);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_distort_points_with_camera_matrix(
    const jyppx_ocv_mat* undistorted,
    jyppx_ocv_mat* distorted,
    const jyppx_ocv_mat* undistorted_camera_matrix,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    double alpha);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_undistort_points(
    const jyppx_ocv_mat* distorted,
    jyppx_ocv_mat* undistorted,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    const jyppx_ocv_mat* r,
    const jyppx_ocv_mat* p,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_estimate_new_camera_matrix(
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    int image_width,
    int image_height,
    const jyppx_ocv_mat* r,
    jyppx_ocv_mat* new_camera_matrix,
    double balance,
    int new_image_width,
    int new_image_height,
    double fov_scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_solve_pnp(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvec,
    jyppx_ocv_mat* tvec,
    int use_extrinsic_guess,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    int* solved);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_fisheye_solve_pnp_ransac(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvec,
    jyppx_ocv_mat* tvec,
    int use_extrinsic_guess,
    int iterations_count,
    float reprojection_error,
    double confidence,
    jyppx_ocv_mat* inliers,
    int flags,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    int* solved);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_homography(
    const jyppx_ocv_mat* src_points,
    const jyppx_ocv_mat* dst_points,
    int method,
    double ransac_reproj_threshold,
    jyppx_ocv_mat* mask,
    int max_iters,
    double confidence,
    jyppx_ocv_mat** homography);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_fundamental_mat(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    int method,
    double ransac_reproj_threshold,
    double confidence,
    int max_iters,
    jyppx_ocv_mat* mask,
    jyppx_ocv_mat** fundamental);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_essential_mat(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    const jyppx_ocv_mat* camera_matrix,
    int method,
    double prob,
    double threshold,
    int max_iters,
    jyppx_ocv_mat* mask,
    jyppx_ocv_mat** essential);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_essential_mat_focal(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    double focal,
    double pp_x,
    double pp_y,
    int method,
    double prob,
    double threshold,
    int max_iters,
    jyppx_ocv_mat* mask,
    jyppx_ocv_mat** essential);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_essential_mat_two_cameras(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* dist_coeffs1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs2,
    int method,
    double prob,
    double threshold,
    jyppx_ocv_mat* mask,
    jyppx_ocv_mat** essential);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_decompose_essential_mat(
    const jyppx_ocv_mat* essential,
    jyppx_ocv_mat* r1,
    jyppx_ocv_mat* r2,
    jyppx_ocv_mat* t);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_recover_pose(
    const jyppx_ocv_mat* essential,
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    const jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    jyppx_ocv_mat* mask,
    int* inlier_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_recover_pose_focal(
    const jyppx_ocv_mat* essential,
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    double focal,
    double pp_x,
    double pp_y,
    jyppx_ocv_mat* mask,
    int* inlier_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_recover_pose_with_distance(
    const jyppx_ocv_mat* essential,
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    const jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    double distance_thresh,
    jyppx_ocv_mat* mask,
    jyppx_ocv_mat* triangulated_points,
    int* inlier_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_recover_pose_two_cameras(
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* dist_coeffs1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs2,
    jyppx_ocv_mat* essential,
    jyppx_ocv_mat* r,
    jyppx_ocv_mat* t,
    int method,
    double prob,
    double threshold,
    jyppx_ocv_mat* mask,
    int* inlier_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_compute_correspond_epilines(
    const jyppx_ocv_mat* points,
    int which_image,
    const jyppx_ocv_mat* fundamental,
    jyppx_ocv_mat* lines);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_translation_3d(
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* destination,
    jyppx_ocv_mat* translation,
    jyppx_ocv_mat* inliers,
    double ransac_threshold,
    double confidence,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_translation_2d(
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* destination,
    jyppx_ocv_mat* inliers,
    int method,
    double ransac_reproj_threshold,
    int max_iters,
    double confidence,
    int refine_iters,
    double* translation_x,
    double* translation_y);