src/OpenCvSharp/Internal/Interop/NativeMethods.Calib3D.LibraryImport.cs

#if NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace JYPPX.OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [StructLayout(LayoutKind.Sequential)]
        internal struct Calib3DPoint2fNative
        {
            internal float X;
            internal float Y;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct Calib3DPoint3fNative
        {
            internal float X;
            internal float Y;
            internal float Z;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct Calib3DVec4fNative
        {
            internal float V0;
            internal float V1;
            internal float V2;
            internal float V3;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct Calib3DVec6fNative
        {
            internal float V0;
            internal float V1;
            internal float V2;
            internal float V3;
            internal float V4;
            internal float V5;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct Calib3DUsacParamsNative
        {
            internal double Confidence;
            internal int IsParallel;
            internal int LoIterations;
            internal int LoMethod;
            internal int LoSampleSize;
            internal int MaxIterations;
            internal int NeighborsSearch;
            internal int RandomGeneratorState;
            internal int Sampler;
            internal int Score;
            internal double Threshold;
            internal int FinalPolisher;
            internal int FinalPolisherIterations;
        }

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_rodrigues")]
        internal static partial int Calib3DRodrigues(IntPtr src, IntPtr dst, IntPtr jacobian);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_rq_decomp3x3")]
        internal static partial int Calib3DRQDecomp3x3(IntPtr src, IntPtr mtxR, IntPtr mtxQ, IntPtr qx, IntPtr qy, IntPtr qz, out double eulerX, out double eulerY, out double eulerZ);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_decompose_projection_matrix")]
        internal static partial int Calib3DDecomposeProjectionMatrix(IntPtr projMatrix, IntPtr cameraMatrix, IntPtr rotMatrix, IntPtr transVect, IntPtr rotMatrixX, IntPtr rotMatrixY, IntPtr rotMatrixZ, IntPtr eulerAngles);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_compose_rt")]
        internal static partial int Calib3DComposeRT(IntPtr rvec1, IntPtr tvec1, IntPtr rvec2, IntPtr tvec2, IntPtr rvec3, IntPtr tvec3);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_compose_rt_extended")]
        internal static partial int Calib3DComposeRTExtended(
            IntPtr rvec1,
            IntPtr tvec1,
            IntPtr rvec2,
            IntPtr tvec2,
            IntPtr rvec3,
            IntPtr tvec3,
            IntPtr dr3dr1,
            IntPtr dr3dt1,
            IntPtr dr3dr2,
            IntPtr dr3dt2,
            IntPtr dt3dr1,
            IntPtr dt3dt1,
            IntPtr dt3dr2,
            IntPtr dt3dt2);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_project_points")]
        internal static partial int Calib3DProjectPoints(IntPtr objectPoints, IntPtr rvec, IntPtr tvec, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr imagePoints, IntPtr jacobian, double aspectRatio);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_project_points_separated_jacobians")]
        internal static partial int Calib3DProjectPointsSeparatedJacobians(
            IntPtr objectPoints,
            IntPtr rvec,
            IntPtr tvec,
            IntPtr cameraMatrix,
            IntPtr distCoeffs,
            IntPtr imagePoints,
            IntPtr dpdr,
            IntPtr dpdt,
            IntPtr dpdf,
            IntPtr dpdc,
            IntPtr dpdk,
            IntPtr dpdo,
            double aspectRatio);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_solve_pnp")]
        internal static partial int Calib3DSolvePnP(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvec, IntPtr tvec, int useExtrinsicGuess, int flags, out int solved);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_solve_pnp_ransac")]
        internal static partial int Calib3DSolvePnPRansac(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvec, IntPtr tvec, int useExtrinsicGuess, int iterationsCount, float reprojectionError, double confidence, IntPtr inliers, int flags, out int solved);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_project_points")]
        internal static partial int Calib3DFisheyeProjectPoints(IntPtr objectPoints, IntPtr rvec, IntPtr tvec, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr imagePoints, double alpha, IntPtr jacobian);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_distort_points")]
        internal static partial int Calib3DFisheyeDistortPoints(IntPtr undistorted, IntPtr distorted, IntPtr cameraMatrix, IntPtr distCoeffs, double alpha);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_distort_points_with_camera_matrix")]
        internal static partial int Calib3DFisheyeDistortPointsWithCameraMatrix(IntPtr undistorted, IntPtr distorted, IntPtr undistortedCameraMatrix, IntPtr cameraMatrix, IntPtr distCoeffs, double alpha);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_undistort_points")]
        internal static partial int Calib3DFisheyeUndistortPoints(IntPtr distorted, IntPtr undistorted, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr r, IntPtr p, int criteriaType, int criteriaMaxCount, double criteriaEpsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_estimate_new_camera_matrix")]
        internal static partial int Calib3DFisheyeEstimateNewCameraMatrix(IntPtr cameraMatrix, IntPtr distCoeffs, int imageWidth, int imageHeight, IntPtr r, IntPtr newCameraMatrix, double balance, int newImageWidth, int newImageHeight, double fovScale);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_solve_pnp")]
        internal static partial int Calib3DFisheyeSolvePnP(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvec, IntPtr tvec, int useExtrinsicGuess, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out int solved);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_fisheye_solve_pnp_ransac")]
        internal static partial int Calib3DFisheyeSolvePnPRansac(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvec, IntPtr tvec, int useExtrinsicGuess, int iterationsCount, float reprojectionError, double confidence, IntPtr inliers, int flags, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, out int solved);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_homography")]
        internal static partial int Calib3DFindHomography(IntPtr srcPoints, IntPtr dstPoints, int method, double ransacReprojThreshold, IntPtr mask, int maxIters, double confidence, out IntPtr homography);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_fundamental_mat")]
        internal static partial int Calib3DFindFundamentalMat(IntPtr points1, IntPtr points2, int method, double ransacReprojThreshold, double confidence, int maxIters, IntPtr mask, out IntPtr fundamental);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_essential_mat")]
        internal static partial int Calib3DFindEssentialMat(IntPtr points1, IntPtr points2, IntPtr cameraMatrix, int method, double prob, double threshold, int maxIters, IntPtr mask, out IntPtr essential);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_essential_mat_focal")]
        internal static partial int Calib3DFindEssentialMatFocal(IntPtr points1, IntPtr points2, double focal, double ppX, double ppY, int method, double prob, double threshold, int maxIters, IntPtr mask, out IntPtr essential);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_essential_mat_two_cameras")]
        internal static partial int Calib3DFindEssentialMatTwoCameras(IntPtr points1, IntPtr points2, IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int method, double prob, double threshold, IntPtr mask, out IntPtr essential);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_decompose_essential_mat")]
        internal static partial int Calib3DDecomposeEssentialMat(IntPtr essential, IntPtr r1, IntPtr r2, IntPtr t);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_recover_pose")]
        internal static partial int Calib3DRecoverPose(IntPtr essential, IntPtr points1, IntPtr points2, IntPtr cameraMatrix, IntPtr r, IntPtr t, IntPtr mask, out int inlierCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_recover_pose_focal")]
        internal static partial int Calib3DRecoverPoseFocal(IntPtr essential, IntPtr points1, IntPtr points2, IntPtr r, IntPtr t, double focal, double ppX, double ppY, IntPtr mask, out int inlierCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_recover_pose_with_distance")]
        internal static partial int Calib3DRecoverPoseWithDistance(IntPtr essential, IntPtr points1, IntPtr points2, IntPtr cameraMatrix, IntPtr r, IntPtr t, double distanceThresh, IntPtr mask, IntPtr triangulatedPoints, out int inlierCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_recover_pose_two_cameras")]
        internal static partial int Calib3DRecoverPoseTwoCameras(IntPtr points1, IntPtr points2, IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, IntPtr essential, IntPtr r, IntPtr t, int method, double prob, double threshold, IntPtr mask, out int inlierCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_compute_correspond_epilines")]
        internal static partial int Calib3DComputeCorrespondEpilines(IntPtr points, int whichImage, IntPtr fundamental, IntPtr lines);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_translation_3d")]
        internal static partial int Calib3DEstimateTranslation3D(IntPtr source, IntPtr destination, IntPtr translation, IntPtr inliers, double ransacThreshold, double confidence, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_translation_2d")]
        internal static partial int Calib3DEstimateTranslation2D(IntPtr source, IntPtr destination, IntPtr inliers, int method, double ransacReprojThreshold, int maxIters, double confidence, int refineIters, out double translationX, out double translationY);
